--- a/curios/t_conv/README.mkd
+++ b/curios/t_conv/README.mkd
@@ -6,7 +6,11 @@ Converts temperature unit from Fahrenheit to Celsius, and vice versa.
 To Make
 -------
 
-Simply run make, i.e.:
+You need to link to my custom *sstring* and *rematch* libraries (this is necessary to keep up to date with those verkakte libraries). From inside *t_conv* directory:
+
+		$ ln /PATH/TO/custom_libraries/lib/sstring.[hc] /PATH/TO/custom_libraries/lib/rematch.[hc] ./
+
+Then just compile:
 
 		$ make
 
