3rd attempt to get GitHub markdown to emph parenthetical definitions

--- a/KnR/FAQ.mkd
+++ b/KnR/FAQ.mkd
@@ -33,6 +33,6 @@ __Q: Yes: you seem to have stopped half-way through the book--why? Also, will yo
 
 __TL;DR__ Because I fucking hate working through books, and realized that I could learn C (or anything CS related for that matter) by simply hacking on projects.
 
-__TL__ Harry Frankfurt pointed out that we are capable of two kinds of desires: what we want \(*first order desires*\), and what we want to want \(*second order desires*\). For instance, a man may want another man--his sexual attraction being a first order desire--but due to an unfortunate religio-sociological belief may not want to want the other man--his homophobia being a second order desire. I have always wanted to be one of the cool scholar-types who pursues apotheosis through academic learning; however, by nature I can only be engaged by the praxis of cool projects, not their theoria. In June, I finally came out of the closet as a proud hacker.
+__TL__ Harry Frankfurt pointed out that we are capable of two kinds of desires: what we want (i.e. *first order desires*), and what we want to want (i.e. *second order desires*). For instance, a man may want another man--his sexual attraction being a first order desire--but due to an unfortunate religio-sociological belief may not want to want the other man--his homophobia being a second order desire. I have always wanted to be one of the cool scholar-types who pursues apotheosis through academic learning; however, by nature I can only be engaged by the praxis of cool projects, not their theoria. In June, I finally came out of the closet as a proud hacker.
 
 So, no, I will not be finishing *K & R*. I will be finishing plenty of cool projects instead, though!
