Raw numbers, no longer an average

--- a/KnR/ch_5/5.07/5-7.mkd
+++ b/KnR/ch_5/5.07/5-7.mkd
@@ -3,6 +3,6 @@ Solution to K & R exercise 5-7
 
 To be honest: I have no idea which is faster.
 
-Unless my speed test is fallacious (perhaps dividing by the element number is making the difference too small for floating point notation?), it appears as though the two versions are approximately as fast as the other.
+Unless my speed test is fundamentally flawed, it appears as though the two versions are approximately as fast as the other, with possibly the new sort being marginally faster.
 
 That said, the new version is cleaner and simpler, and superior for that alone.
